assets/scss/main.scss
/* ... */
@font-face {
    font-family: $font-space-grotesk;
    font-style: normal;
    font-display: swap;
    font-weight: 300 700;
    src: url('/fonts/space-grotesk-latin-wght-normal.woff2')
        format('woff2-variations');
    unicode-range:
        U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
        U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
        U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

:root {
    color-scheme: light dark;
}

/* Extends */
%macula {
    font-family: $font-macula, serif;
    text-transform: uppercase;
}

%grotesk {
    font-family: $font-space-grotesk, sans-serif;
    font-weight: 300;
}

%list {
    margin: 0;
    padding: 0;
    list-style: none;
    box-sizing: border-box;
}

%form-layout {
    width: 100%;
    text-align: center;
    border: none;
    box-shadow: none;
    padding: 0;
    margin: 0;
}

%form-input-style {
    @extend %form-layout;

    font-family: $font-main;
    font-size: 16px;
    background-color: $color-content-secondary;

    &:hover,
    &:focus {
        outline: none;
    }

    &::placeholder {
        @extend %transition-ease-in-out;

        color: $color-text-placeholder;
    }
}

%field-title-style {
    @extend %form-layout;

    display: inline-block;
    background-color: $color-banner-background;
    font-weight: bold;

    @extend %outline-dashed;
}

%no-select {
    -webkit-touch-callout: none;
    user-select: none;
}

%allow-select-text {
    user-select: text;
    -webkit-tap-highlight-color: $content-highlight;
}

%full-screen {
    width: 100%;
    height: 100%;
    overflow: hidden;
    position: absolute;
    top: 0;
    left: 0;
}

%transition-ease-in-out {
    transition: all 200ms ease-in-out;
}

%threed-side {
    content: '';
    display: block;
    position: absolute;
    height: var(--threed-height);
    transform-style: preserve-3d;
    perspective: inherit;
    perspective-origin: inherit;
    background-color: inherit;
    width: 100%;
    left: 0;
    box-sizing: content-box;

    @extend %outline-dashed;
}

%threed-side-top {
    --threed-height: 100%;

    &::before {
        @extend %threed-side;

        filter: light-dark(
            brightness($brightness-threed-top-light),
            brightness($brightness-threed-top-dark)
        );
        transform: rotateX(calc($threed-angle))
            translate3d(0, -50%, calc(-1 * $outline-size / 2));
        top: calc(-1 * var(--threed-height) * cos($threed-angle));
    }
}

%threed-side-bottom {
    --threed-height: 100%;

    &::after {
        @extend %threed-side;

        filter: light-dark(
            brightness($brightness-threed-bottom-light),
            brightness($brightness-threed-bottom-dark)
        );
        transform: rotateX(calc(-1 * $threed-angle))
            translate3d(0, 50%, calc(-1 * $outline-size / 2));
        top: calc(var(--threed-height) * (cos($threed-angle)));
    }
}

@mixin rotate-faces($deg) {
    .face-front {
        transform: rotateY($deg);
    }

    .face-left {
        transform: rotateY(-90deg + $deg);
    }

    .face-right {
        transform: rotateY(90deg + $deg);
    }

    .face-back {
        transform: rotateY(180deg + $deg);
    }

    .face-top {
        transform: rotateX(90deg) rotateZ(-$deg);
    }

    .face-bottom {
        transform: rotateX(-90deg) rotateZ($deg);
    }
}

$face-rotation-map: (
    'about': 0deg,
    'work': -90deg,
    'notes': -180deg,
    'contact': -270deg,
);

// maps the current cube face to the back-face, for hiding content
$face-backface-map: (
    'about': 'notes',
    'work': 'contact',
    'notes': 'about',
    'contact': 'work',
);

@mixin navigate($face-name) {
    $deg: map.get($face-rotation-map, $face-name);
    $backface-name: map.get($face-backface-map, $face-name);

    #content-cube {
        @include rotate-faces($deg);

        ##{$face-name} {
            filter: none;
            background-color: transparent;
            z-index: 4;

            > .face-content {
                transform: translateZ(0);
                pointer-events: auto;
                content-visibility: visible;

                .title-section > h1 {
                    // Only enable animation when in focus
                    @extend %gradient-animation;
                }
            }
        }

        ##{$backface-name} {
            > .face-content {
                // make sure the back face's content is always hidden so it doesn't interfere with the current face's content
                content-visibility: hidden;
            }
        }
    }
}

/* Main styles */
::selection {
    background: $content-highlight;
    color: white;
}

html {
    height: 100%;
    min-height: 100%;
    overflow: hidden;
}

body {
    @extend %no-select;

    width: 100%;
    height: 100%;
    font-family: $font-main;
    color: $color-text;
    margin: 0;
    padding: 0;
    overflow: hidden;
    text-align: center;
    text-rendering: geometricprecision;
}

main {
    height: fit-content;
    width: fit-content;
    pointer-events: none;
}

.center-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    @extend %full-screen;
}

.center-vertical {
    display: flex;
    align-items: center;
}

@keyframes heading-gradient-animation {
    0% {
        background-position: 0;
    }

    100% {
        background-position: 100%;
    }
}

%gradient-background {
    background: $gradient-background;
    background-clip: text;
    color: transparent;
    background-size: 300% 100%;
}

%gradient-animation {
    animation: heading-gradient-animation 15s linear infinite;
    animation-direction: alternate;
    animation-delay: 0s;
}

.text-gradient {
    @extend %gradient-background;
    @extend %gradient-animation;
}

h1 {
    display: inline-block;
    font-size: $h1-size;
    margin: 0;

    @extend %macula;
}
/* ... */

